# arize-play

./: .gitignore  Makefile  README.md  config.yaml  demo-01.md  demo-02.md  demo-03.md  demo-04.md  demo-05.md  design.md  outputs-demo-01.txt  outputs-demo-02.txt  outputs-demo-03.txt  outputs-demo-04.txt  outputs-demo-05.txt  pyproject.toml  requirements.txt  run_all.py
common/: config.py  console.py  evaluators.py  llm.py  tracing.py
k8s/: 10-postgres-deployment.yaml  11-postgres-service.yaml  12-phoenix-deployment.yaml  13-phoenix-service.yaml  20-litellm-config.yaml  21-litellm-models.yaml  22-litellm-deployment.yaml  23-litellm-service.yaml
pattern1_customer_facing/: agent.py  employees.json
pattern2_internal_enterprise/: agent.py  expenses.json
pattern3_developer_platform/: agent.py  logs.json
pattern4_improvement_loop/: agent.py
pattern5_credit_card_redaction/: agent.py  customers.json
scripts/: configure_ollama.sh  discover_ollama_models.sh
