[project]
name = "arize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=17.26.0",
    "arize-phoenix-otel>=0.16.1",
    "httpx>=0.28.1",
    "openinference-semantic-conventions>=0.1.30",
    "pyyaml>=6.0.3",
]
